# GRPC

./: git.md  grpc生成文件种类.md  报错.md
grpc通信/: CMakeLists.txt  GrpcClient.cc  GrpcImpl.h  Singleton.h  main.cc  message.grpc.pb.h  message.pb.cc  message.proto
grpc通信2/: GrpcClient.cc  GrpcClient.h  GrpcImpl.cc  GrpcImpl.h  main.cc  message.grpc.pb.cc  message.pb.h
